[project] 
name = "spark_custom_io"
version = "0.1.0"
description = "Custom PySpark DataSource for Databricks"
authors = [
    { name = "de.lopezbarron@gmail.com" }
]

readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["spark_custom_io"]

[project.dependencies]
pyspark = ">=4.0.0"